--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
   <tr>
     <td>making jokes</td>
     <td>*</td>
-    <td>making a fool of myself</td>
+    <td>trolling friends</td>
     <td>*****</td>
     <td>imitation</td>
     <td>***</td>
