--- a/contacts.html
+++ b/contacts.html
@@ -13,13 +13,13 @@
         <th>email ID</th>
       </thead>
       <tbody>
-        <td>5-8-812, ojima 6 chome</td>
+        <td>882-8630-98, anounymous city</td>
         <td>080-3596-7842</td>
-        <td>murshidahackusate@gmail.com</td>
+        <td>random@gmail.com</td>
       </tbody>
     </table>
     <h3>send me a message!</h3>
-    <form action="mailto:murshidahackusate@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:random@gmail.com" method="post" enctype="text/plain">
 
     <label>Your name:</label>
     <input type="text" name="YourName" value="">
