--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
-
+  <link rel="stylesheet" href="styles.css">
 
 </head>
 
