--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
-  <link rel="stylesheet" href="styles.css">
+  <style>
+    body{
+
+  background-image:url('https://www.desktopbackground.org/wallpaper/bmp-wallpapers-wallpapers-cave-475584');
+}
+
+hr{
+  border-color: whitesmoke;
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  width: 5%;
+}
+
+h1{
+  color:whitesmoke;
+}
+
+h3{
+  color:whitesmoke;
+}
+
+  </style>
 
 </head>
 
