--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <style>
     body{
 
-  background-image:url('https://www.desktopbackground.org/wallpaper/bmp-wallpapers-wallpapers-cave-475584');
+  background-color:turquoise;
 }
 
 hr{
