--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
+
   <style>
+    
     body{
 
-  background-color:turquoise;
+  background-color: turquoise;
 }
 
 hr{
@@ -29,7 +31,7 @@ h1{
 h3{
   color:whitesmoke;
 }
-
+    
   </style>
 
 </head>
@@ -46,9 +48,9 @@ h3{
       <td>
         <h1>M.Mohammed Murshid</h1>
         <em>8th grade student, <strong>beginner programmer</strong></em>
-        <hr size="2">
+        <hr>
         I am a new programmer who seeks to become a professional programmer just for the fun of it, but that may change in the near future.
-        <hr size="2">
+        <hr>
       </td>
     </tr>
   </table>
@@ -69,7 +71,9 @@ h3{
     <li>well, there is a lot of tags in html, so i think i might add a link to a separate page...</li>
   </ol>
 
-  <hr noshade >
+  <hr>
+
+  <h3>My other websites</h3>
 
   <p>Before I started taking legit tutorials for programming, I went a little too enthusiastically and basically made a bunch of stupid mini-websites, and Im goning to link them below to see how bad and poorly they are made.</p>
 
@@ -79,7 +83,9 @@ h3{
     <li><a href="file:///C:/Users/moham/Desktop/DHTML%20MTE/WebDevTST/the%20trolling%20page%20.html" target="_blank">link 3(a troll site, you have been warned)</a></li>
   </ul>
 
-  <hr noshade>
+  <hr>
+
+  <h3>Speed cubing</h3>
 
   <p>here is all my timings and improvements in cubing over the years</p>
 
@@ -118,9 +124,9 @@ h3{
 
   </table>
 
-  <hr noshade>
+  <hr>
 
-<h3>and here are some of my skill sets..</h3>
+<h3>skill sets</h3>
 
 <table border="1" cellspacing="10">
   <tr>
@@ -134,12 +140,13 @@ h3{
   <tr>
     <td>making jokes</td>
     <td>*</td>
-    <td>trolling friends</td>
+    <td>making a fool of myself</td>
     <td>*****</td>
     <td>imitation</td>
     <td>***</td>
   </tr>
 </table>
 </body>
+
 
 </html>
