--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
+  <link rel="stylesheet" href="css-styles\styles.css">
 
-  <style>
+<!--  <style>
     
     body{
 
@@ -32,7 +33,7 @@ h3{
   color:whitesmoke;
 }
     
-  </style>
+  </style> -->
 
 </head>
 
