--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My contact Details</title>
-    <link rel="stylesheet" href="css-styles\styles.css">
+    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
   </head>
   <body>
     <h1>My contact details</h1>
