--- a/contacts.html
+++ b/contacts.html
@@ -3,7 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>My contact Details</title>
-    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
+<!--    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">  -->
+    <style>
+      body{
+
+  background-color: turquoise;
+}
+
+hr{
+  border-color: whitesmoke;
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  width: 5%;
+}
+
+h1{
+  color:whitesmoke;
+}
+
+h3{
+  color:whitesmoke;
+}
+
+    </style>  
   </head>
   <body>
     <h1>My contact details</h1>
