--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
-  <link rel="stylesheet" href="css-styles\styles.css">
+<!--  <link rel="stylesheet" href="css-styles\styles.css"> -->
 
-<!--  <style>
+  <style>
     
     body{
 
@@ -25,19 +25,32 @@ hr{
   width: 5%;
 }
 
+p{
+  color:turquoise;
+}
+
 h1{
-  color:whitesmoke;
+  color:turquoise;
 }
 
 h3{
-  color:whitesmoke;
+  color:turquoise;
 }
+
+table{
+  color:turquoise;
+}
+
+li{
+  color:turquoise;
+}
+
     
-  </style> -->
+  </style> 
 
 </head>
 
-<body style="background-color:#00FFB0">
+<body style="background-image:url(https://img.wallpapersafari.com/desktop/1920/1080/28/66/sOByYz.jpg)">
 
 
   <table cellspacing="20">
