--- a/index.html
+++ b/index.html
@@ -8,45 +8,8 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
-<!--  <link rel="stylesheet" href="css-styles\styles.css"> -->
 
-  <style>
-    
-    body{
-
-  background-color: turquoise;
-}
-
-hr{
-  border-color: whitesmoke;
-  border-style: none;
-  border-top-style: dotted;
-  border-width: 5px;
-  width: 5%;
-}
-
-p{
-  color:turquoise;
-}
-
-h1{
-  color:turquoise;
-}
-
-h3{
-  color:turquoise;
-}
-
-table{
-  color:turquoise;
-}
-
-li{
-  color:turquoise;
-}
-
-    
-  </style> 
+  <link rel="stylesheet" href="css-styles\styles.css">
 
 </head>
 
@@ -57,7 +20,7 @@ li{
 
     <tr>
       <td>
-        <img src="galaxy_fire_water.jpg" alt="Anounymous Profile">
+        <img src="pictures\galaxy_fire_water.jpg" alt="Anounymous Profile">
       </td>
       <td>
         <h1>M.Mohammed Murshid</h1>
@@ -154,7 +117,7 @@ li{
   <tr>
     <td>making jokes</td>
     <td>*</td>
-    <td>making a fool of myself</td>
+    <td>trolling friends</td>
     <td>*****</td>
     <td>imitation</td>
     <td>***</td>
@@ -164,3 +127,4 @@ li{
 
 
 </html>
+
