--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
 
-<!--  <link rel="stylesheet" href="css-styles\styles.css">  -->
+ <link rel="stylesheet" href="css-styles\styles.css"> 
 
 </head>
 
