--- a/index.html
+++ b/index.html
@@ -9,7 +9,36 @@
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
 
- <link rel="stylesheet" href="css-styles\styles.css"> 
+ <!--<link rel="stylesheet" href="css-styles\styles.css"> -->
+  <style>
+    hr{
+  border-color: whitesmoke;
+  border-style: none;
+  border-top-style: dotted;
+  border-width: 5px;
+  width: 5%;
+}
+
+p{
+  color:turquoise;
+}
+
+h1{
+  color:turquoise;
+}
+
+h3{
+  color:turquoise;
+}
+
+table{
+  color:turquoise;
+}
+
+li{
+  color:turquoise;
+}
+  </style>
 
 </head>
 
