--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ li{
 
     <tr>
       <td>
-        <img src="pictures\galaxy_fire_water.jpg" alt="Anounymous Profile">
+        <img src="https://itbrief.co.nz/uploads/story/2014/12/05/suppression.jpg" alt="Anounymous Profile">
       </td>
       <td>
         <h1>M.Mohammed Murshid</h1>
