--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ img{
 
     <tr>
       <td>
-        <img src="https://itbrief.co.nz/uploads/story/2014/12/05/suppression.jpg" alt="Anounymous Profile">
+        <img src="https://itbrief.co.nz/uploads/story/2014/12/05/suppression.jpg" alt="Anounymous Profile" height="100px;"  width="100px;">
       </td>
       <td>
         <h1>M.Mohammed Murshid</h1>
