--- a/contacts.html
+++ b/contacts.html
@@ -28,7 +28,7 @@ h3{
 
     </style>  
   </head>
-  <body>
+  <body style="background-image:url(https://itbrief.co.nz/uploads/story/2014/12/05/suppression.jpg)">
     <h1>My contact details</h1>
     <table cellspacing="20">
       <thead>
