--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
 
- <!--<link rel="stylesheet" href="css-styles\styles.css"> -->
-  <style>
+ <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
+ <!-- <style>
     hr{
   border-color: whitesmoke;
   border-style: none;
@@ -38,12 +38,13 @@ table{
 li{
   color:turquoise;
 }
-  </style>
+  </style>   -->
   
 </head>
 
 <body style="background-image:url(https://img.wallpapersafari.com/desktop/1920/1080/28/66/sOByYz.jpg)">
 
+  <div class="TheWholePage">
 
   <table cellspacing="20">
 
@@ -152,6 +153,7 @@ li{
     <td>***</td>
   </tr>
 </table>
+  </div>
 </body>
 
 
