--- a/contacts.html
+++ b/contacts.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>My contact Details</title>
-<!--    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">  -->
-    <style>
+    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">  
+<!--    <style>
       body{
 
   background-color: turquoise;
@@ -26,7 +26,7 @@ h3{
   color:whitesmoke;
 }
 
-    </style>  
+    </style>  -->
   </head>
   <body style="background-image:url(https://itbrief.co.nz/uploads/story/2014/12/05/suppression.jpg)">
     <h1>My contact details</h1>
