--- a/index.html
+++ b/index.html
@@ -8,9 +8,19 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
+  <style>
+    body{
 
- <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
- <!-- <style>
+  background-image:url(https://img.wallpapersafari.com/desktop/1920/1080/28/66/sOByYz.jpg);
+}
+
+.TheWholePage{
+  color: turquoise;
+}
+  </style>
+  
+  <!--<link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
+ <style>
     hr{
   border-color: whitesmoke;
   border-style: none;
