--- a/contacts.html
+++ b/contacts.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>My contact Details</title>
-    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">  
-<!--    <style>
+<!--    <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">  
+    <style>
       body{
 
   background-color: turquoise;
@@ -27,8 +27,16 @@ h3{
 }
 
     </style>  -->
+    
+    <style>
+      .TheContactsWholePage{
+      color:turquoise;
+      }
+    </style>
   </head>
   <body>
+  <div class"TheContactsWholePage">
+  
     <h1>My contact details</h1>
     <table cellspacing="20">
       <thead>
@@ -57,5 +65,6 @@ h3{
     <input type="submit" name="">
 
     </form>
+    </div>
   </body>
 </html>
