--- a/contacts.html
+++ b/contacts.html
@@ -5,14 +5,20 @@
     <title>My contact Details</title>
     
     <style>
-      .TheContactsWholePage{
-      color:turquoise;
-      }
+       body{
+
+  background-image:url(https://img.wallpapersafari.com/desktop/1920/1080/28/66/sOByYz.jpg);
+}
+
+.TheWholePage{
+  color: turquoise;
+}
+  
     </style>
     
   </head>
   <body>
-  <div class"TheContactsWholePage">
+  <div class="TheWholePage">
   
     <h1>My contact details</h1>
     <table cellspacing="20">
