--- a/contacts.html
+++ b/contacts.html
@@ -34,7 +34,7 @@
       </tbody>
     </table>
     <h3>send me a message!</h3>
-    <form action="mailto:random@gmail.com" method="post" enctype="text/plain">
+    <form action="mailto:murshidazmal@gmail.com" method="post" enctype="text/plain">
 
     <label>Your name:</label>
     <input type="text" name="YourName" value="">
