--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@ li{
   </table>
 
   <hr>
-
+  <p>now if you also want to know how to solve a rubix cube, then go to <a href="how to solve a rubix cube.html">how to solve a rubix cube.html</a>
   </div>
+  
 </body>
 
 
