--- a/how to solve a rubix cube.html
+++ b/how to solve a rubix cube.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <title>how to solve a rubix cube</title>
-    <link rel="stylesheet" href="css-styles\styles.css">
+    <link rel="stylesheet" href="styles.css">
 
   </head>
   <body>
