--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ li{
   </table>
 
   <hr>
-  <p>now if you also want to know how to solve a rubix cube, then go to <a href="how to solve a rubix cube.html">how to solve a rubix cube.html</a>
+  <p>now if you also want to know how to solve a rubix cube, then go to <a href="how to solve a rubix cube.html" taget="_blank">how to solve a rubix cube.html</a>
   </div>
   
 </body>
