--- a/contacts.html
+++ b/contacts.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My contact Details</title>
+    <link rel="stylesheet" href="css/styles.css">
     
     <style>
        body{
@@ -37,13 +38,13 @@
     <form action="mailto:murshidazmal@gmail.com" method="post" enctype="text/plain">
 
     <label>Your name:</label>
-    <input type="text" name="YourName" value="">
+    <input type="text" value="">
     <br>
     <label>your email:</label>
-    <input type="email" name="YourEmail" value="">
+    <input type="email" value="">
     <br>
     <label>your message:</label>
-    <input type="textarea" name="YourMessage" value="">
+    <input type="textarea" value="">
     <br>
     <input type="submit" name="">
 
