--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <meta charset="utf-8">
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
-  <style>
+
+  <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
+  
+  <!--  <style>
     body{
 
   background-image:url(https://img.wallpapersafari.com/desktop/1920/1080/28/66/sOByYz.jpg);
@@ -18,8 +21,6 @@
   color: turquoise;
 }
   </style>
-  
-  <!--<link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
  <style>
     hr{
   border-color: whitesmoke;
