--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="My first professionally guided website">
   <title>My personal Website</title>
 
-  <link rel="stylesheet" href="https://github.com/legendary-ui/cv/blob/master/styles.css">
+  <link rel="stylesheet" href="styles.css">
   
   <!--  <style>
     body{
