--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
         <i class="social-icon fab fa-instagram"></i>
         <i class="social-icon fas fa-envelope"></i>
         <p>© Copyright 2020 Apex</p>
+        <p>© By Mohamed Murshid</p>
       </div>
 
     </footer>
