--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Apex, The Company that makes Websites</title>
+    <meta name="description" content="Apex is a Fake Company made by a Student called M.Mohamed Murshid. Apex is a Company that lets You to Make Your own Website. Read the website for more!">
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Ubuntu" rel="stylesheet">
 
@@ -128,7 +130,7 @@
     <!-- Press -->
 
     <section id="press" class="colored-section">
-      <img class="press-logo" src="images/TechCrunch.png" alt="tc-logo">
+      <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
       <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
       <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
       <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
@@ -295,25 +297,29 @@
         <h2 class="big-heading">Tell us What You Think!</h2>
         <div class="left-align review-adjust">
 
-          <div class="block review-input">
-            <p class="inline">Your Name:   </p><input type="text" class="jsReviewName review-text-adjust">
-          </div>
 
-          <div class="block review-input">
-            <p class="inline">Your Email:   </p><input class="review-text-adjust" type="Email">
-          </div>
+            <form class="" id="jsReviewForm" name="jsReviewForm" onsubmit="">
 
-          <div class="block review-input">
-            <p class="inline">Your Review:   </p><textarea name="name" class="jsReview" rows="3" cols="45"></textarea>
-          </div>
+              <div class="block review-input">
+                <p class="inline">Your Name:   </p><input type="text" class="jsReviewName review-text-adjust">
+              </div>
+
+              <div class="block review-input">
+                <p class="inline">Your Email:   </p><input class="review-text-adjust" type="Email">
+              </div>
+
+              <div class="block review-input">
+                <p class="inline">Your Review:   </p><textarea name="name" class="jsReview" rows="3" cols="45"></textarea>
+              </div>
+
+              <input type="submit" class="btn btn-lg btn-outline-primary jsSubmitReview" value="Submit Review">
+
+            </form>
+
 
         </div>
 
-        <input type="button" class="btn btn-lg btn-outline-primary jsSubmitReview" value="Submit Review">
-
       </div>
-      
-      <P><em>this is a work in progress, please understand</em></P>
 
     </section>
 
