--- a/me.html
+++ b/me.html
@@ -74,7 +74,7 @@
             <button type="button" class="btn btn-lg btn-outline-light download-button"><i class="fas fa-mobile-alt"></i> iphone Mode</button>
           </div>
           <div class="col-lg-6 me-title-img-adjust">
-            <img class="me-title-img" src="https://github.com/legendary-ui/cv/blob/Improved/galaxy_fire_water.jpg" alt="anounymous-png">
+            <img class="me-title-img" src="galaxy_fire_water.jpg" alt="anounymous-png">
           </div>
         </div>
       </div>
